[package]
name = "rust_rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework & Runtime
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }

# Data Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (SQLx for Async SQLite / Postgres)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }

# Authentication & Password Hashing
jsonwebtoken = "9.3"
argon2 = "0.5"

# Error Handling & Environment Variables
thiserror = "1.0"
dotenvy = "0.15"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = "0.3"
